--- a/src/components/RichText/RichText.css
+++ b/src/components/RichText/RichText.css
@@ -9,12 +9,13 @@
 
 :root {
 	--ck-content-font-family: 'Lato';
-	--ck-sidebar-width: 270px;
-	--ck-editor-height: 700px;
+	--ck-sidebar-width: 20%;
+	--ck-editor-height: 80vh;
 }
 
 .main-container {
 	font-family: var(--ck-content-font-family);
+	position: absolute;
 	width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
@@ -68,8 +69,8 @@
 
 .editor-container_document-editor .editor-container__editor .ck.ck-editor__editable {
 	box-sizing: border-box;
-	min-width: calc(210mm + 2px);
-	max-width: calc(210mm + 2px);
+	min-width: calc(300mm + 2px);
+	max-width: calc(310mm + 2px);
 	min-height: 297mm;
 	height: fit-content;
 	padding: 20mm 12mm;
